--- a/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
@@ -88,6 +88,7 @@
 
                         <div class="buttons">
                             <button type="submit" name="add-comment" value="add-comment" class="btn btn-primary blog-post-add-comment-button">
+								<i class="icon icon-ok"></i>
                                 @T("Blog.Comments.SubmitButton")
                             </button>
                         </div>
