--- a/src/Presentation/SmartStore.Web/Views/Boards/_CreateUpdateTopic.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/_CreateUpdateTopic.cshtml
@@ -97,6 +97,7 @@
                             @T("Forum.Submit")
                         </button>
                         <button class="btn" onclick="setLocation('@Url.RouteUrl("ForumSlug", new { id = Model.ForumId, slug = Model.ForumSeName }) '); return false;">
+							<i class="icon icon-remove"></i>
                             @T("Forum.Cancel")
                         </button>
 
