--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductReviews.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductReviews.cshtml
@@ -77,7 +77,10 @@
                         </div>
 
                         <div class="buttons clearfix">
-                            <input type="submit" name="add-review" class="btn write-product-review-button" value="@T("Reviews.SubmitButton")" />
+                            <button type="submit" name="add-review" class="btn btn-primary write-product-review-button" value="@T("Reviews.SubmitButton")">
+								<i class="icon icon-ok"></i>
+								@T("Reviews.SubmitButton")
+							</button>
                         </div>
                     </div>
                 }
