--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
@@ -172,6 +172,7 @@
                         //IMPORTANT: first element must have a margin of 10px otherwise columns aren't eqalized
                         <div class="clearfix" style="margin-top:10px">
                             <a class="btn btn-primary pull-right" href="@Url.Content("~/admin/product/edit/" + Model.Id)" target="admin-product">
+								<i class="icon icon-edit"></i>
                                 @T("Common.Catalog.EditProduct")
                             </a>
                         </div>
