--- a/src/Presentation/SmartStore.Web/Views/Common/ContactUs.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ContactUs.cshtml
@@ -67,7 +67,10 @@
                 
                 <div class="control-group">
                     <div class="controls">
-                        <button type="submit" name="send-email" class="btn btn-primary">@T("ContactUs.Button")</button>
+                        <button type="submit" name="send-email" class="btn btn-primary">
+							<i class="icon icon-ok"></i>
+							@T("ContactUs.Button")
+						</button>
                     </div>
                 </div>
                 @*codehint: sm-edit end *@
