--- a/src/Presentation/SmartStore.Web/Views/Customer/AddressEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/AddressEdit.cshtml
@@ -30,7 +30,10 @@
             <div class="buttons form-horizontal">
                 <div class="control-group">
                     <div class="controls">
-                        <button type="submit" class="btn btn-primary">@T("Common.Save")</button>
+                        <button type="submit" class="btn btn-primary">
+							<i class="icon icon-save"></i>
+							@T("Common.Save")
+						</button>
                     </div>
                 </div>
             </div>
