--- a/src/Presentation/SmartStore.Web/Views/Customer/ChangePassword.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/ChangePassword.cshtml
@@ -55,7 +55,10 @@
             </div>
             <div class="control-group">
                 <div class="controls">
-                    <button type="submit" class="btn btn-primary">@T("Account.ChangePassword.Button")</button>
+                    <button type="submit" class="btn btn-primary">
+						<i class="icon icon-ok"></i>
+						@T("Account.ChangePassword.Button")
+					</button>
                 </div>    
             </div>
         </div>
