--- a/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
@@ -76,6 +76,7 @@
                                     <td>
                                         @*codehint: sm-edit *@
                                         <a class="btn" href="@Url.RouteUrl("OrderDetails", new { orderId = item.InitialOrderId })">
+											<i class="icon icon-list-alt"></i>
                                             @string.Format(@T("Account.CustomerOrders.RecurringOrders.ViewInitialOrder").Text, item.InitialOrderId)
                                         </a>
                                     </td>
@@ -84,6 +85,7 @@
                                         {
                                             @*codehint: sm-edit *@
                                             <button type="submit" name="cancelRecurringPayment@(item.Id)" class="btn btn-danger">
+												<i class="icon icon-trash"></i>
                                                 @T("Account.CustomerOrders.RecurringOrders.Cancel")
                                             </button>
                                         }
@@ -126,14 +128,14 @@
                     <div class="buttons pull-right">
                         @if (order.IsReturnRequestAllowed)
                         {
-                            @*codehint: sm-edit *@
                             <a class="btn" href="@Url.RouteUrl("ReturnRequest", new { orderId = order.Id })">
+								<i class="icon icon-reply"></i>
                                 @T("Account.CustomerOrders.ReturnItems")
                             </a>
                             <text>&nbsp;&nbsp;&nbsp;</text>
                         }
-                        @*codehint: sm-edit *@
                         <a class="btn" href="@Url.RouteUrl("OrderDetails", new { orderId = order.Id })">
+							<i class="icon icon-list-alt"></i>
                             @T("Account.CustomerOrders.OrderDetails")
                         </a>
                     </div>
