--- a/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/EditSlide.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/EditSlide.cshtml
@@ -13,7 +13,7 @@
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
-            <button type="submit" id="slide-delete" name="slide-delete" class="btn btn-danger"><i class="icon-remove icon-white"></i>&nbsp;@T("Admin.Common.Delete")</button>
+            <button type="submit" id="slide-delete" name="slide-delete" class="btn btn-danger"><i class="icon-trash icon-white"></i>&nbsp;@T("Admin.Common.Delete")</button>
         </div>
     </div>
     @Html.Partial("_CreateOrUpdate", Model)
