--- a/src/Presentation/SmartStore.Web/Views/Catalog/CompareProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CompareProducts.cshtml
@@ -37,6 +37,7 @@
         {
             <div class="ar">
                 <a class="btn" href='@Url.RouteUrl("ClearCompareList")' style="margin-bottom: 12px">
+					<i class="icon icon-trash"></i>
                     @T("Products.Compare.Clear")
                 </a>
             </div>
@@ -49,7 +50,7 @@
                         </td>
                         @foreach (var product in Model.Products)
                         {
-                            <td style="width: @columnWidth;" class="ac">
+                            <td style="width: @columnWidth; vertical-align: bottom;" class="ac">
                                 <div>
                                     <p>
                                         <img alt="@product.DefaultPictureModel.AlternateText" src="@product.DefaultPictureModel.ImageUrl" title="@product.DefaultPictureModel.Title" />
