--- a/src/Presentation/SmartStore.Web/Content/editors/tinymce4/skins/smartstore/skin.smartstore.css
+++ b/src/Presentation/SmartStore.Web/Content/editors/tinymce4/skins/smartstore/skin.smartstore.css
@@ -1,6 +1,6 @@
 
 div.mce-fullscreen {
-	top: 52px !important;
+	z-index: 1000;
 }
 
 .mce-container, .mce-container *, .mce-widget, .mce-widget * {
