* Created package creator tool (WinForms). Enbales creation of NuGet packages for plugins and themes * Began implementing upload for plugin packages

--- a/src/Presentation/SmartStore.Web/Administration/Content/variables.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/variables.less
@@ -53,9 +53,9 @@
 @baseLineHeight:        18px; // 20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    'Segoe UI Light', 'Segoe UI', Arial, Helvetica, sans-serif; //inherit; // empty to use BS default, @baseFontFamily
-@headingsFontWeight:    lighter; //bold;    // instead of browser default, bold
-@headingsColor:         #7b4f9d; //#009fff; //inherit; // empty to use BS default, @textColor
+@headingsFontFamily:    'Segoe UI Semibold', 'Segoe UI', Arial, Helvetica, sans-serif; //inherit; // empty to use BS default, @baseFontFamily
+@headingsFontWeight:    600; //bold;    // instead of browser default, bold
+@headingsColor:         #777; //#009fff; //inherit; // empty to use BS default, @textColor
 
 
 // Component sizing
