--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -25,6 +25,10 @@
                 <span class="label label-important label-uninstall-count hide">0</span>
                 <span class="label label-warning label-install-count hide">0</span>
             </button>
+			<a id="uploadpackage" href="#uploadpackage-window" data-toggle="modal" class="btn" role="button">
+				<i class="icon-upload-alt"></i>
+				Upload package
+			</a>
             <div class="btn-group" style="vertical-align: middle">
                 <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                     @T("Admin.Common.Edit")&nbsp;<span class="icon-caret-down"></span>
@@ -343,3 +347,45 @@
     });
 </script>
 }
+
+@*Upload package form*@
+@{Html.SmartStore().Window()
+	.Name("uploadpackage-window")
+	.Title("Upload plugin package")
+	.Content(@<text>
+		@using (Html.BeginForm("UploadPackage", "Plugin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+		{
+			<div id="package-upload">
+				<table style="text-align: left;">
+					<tr>
+						<td>
+							<strong>Package file (nupkg): </strong>
+						</td>
+						<td>
+							<input type="file" id="packagefile" name="packagefile" />
+						</td>
+					</tr>
+				</table>
+			</div>
+		}
+
+	</text>)
+	.FooterContent(@<text>
+		<button id="uploadpackagesubmit" type="submit" class="btn btn-primary">Upload</button>
+		<a href="#" class="btn btn-link" data-dismiss="modal">@T("Common.Cancel")</a>
+	</text>)
+	.Modal(true)
+	.Visible(false)
+	.Render();
+}
+
+<script>
+	$(function () {
+		$("#uploadpackagesubmit").click(function (e) {
+			e.preventDefault();
+			var btn = $(this);
+			var win = $('#uploadpackage-window');
+			win.find("form").submit();
+		});
+	});
+</script>
