--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -612,8 +612,8 @@
                 <button type="submit" name="btnEditOrderTotals" onclick="toggleOrderTotals(true);return false;" id="btnEditOrderTotals" class="btn" style="margin-top:5px;">
 					<i class="icon-edit"></i>&nbsp;@T("Admin.Orders.Fields.EditOrderTotals")
 				</button>
-                <button type="submit" name="btnSaveOrderTotals" id="btnSaveOrderTotals" class="btn btn-primary" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
-					<i class="icon-save"></i>&nbsp;@T("Admin.Orders.Fields.SaveOrderTotals")
+                <button type="submit" name="btnSaveOrderTotals" id="btnSaveOrderTotals" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+					<i class="icon-ok"></i>&nbsp;@T("Admin.Orders.Fields.SaveOrderTotals")
 				</button>
                 <button type="submit" name="btnCancelOrderTotals" onclick="toggleOrderTotals(false);return false;" id="btnCancelOrderTotals" class="btn">
 					<i class="icon-remove"></i>&nbsp;@T("Admin.Orders.Fields.CancelOrderTotals")
@@ -700,14 +700,23 @@
         @if (Model.AllowStoringCreditCardNumber)
         {
             <tr>
-                <td>
-                    <input type="submit" name="btnEditCC" value="@T("Admin.Orders.Fields.EditCC")" onclick="toggleCC(true);return false;" id="btnEditCC" class="btn" />
-                    <input type="submit" name="btnSaveCC" value="@T("Admin.Orders.Fields.SaveCC")" id="btnSaveCC" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" />
-                </td>
-                <td>
-                    <input type="submit" name="btnCancelCC" value="@T("Admin.Orders.Fields.CancelCC")" onclick="toggleCC(false);return false;" id="btnCancelCC" class="btn" />
+                <td colspan="2">
+                    <button type="submit" name="btnEditCC" value="@T("Admin.Orders.Fields.EditCC")" onclick="toggleCC(true);return false;" id="btnEditCC" class="btn">
+						<i class="icon icon-edit"></i>&nbsp;@T("Admin.Orders.Fields.EditCC")
+					</button>
+                    <button type="submit" name="btnSaveCC" value="@T("Admin.Orders.Fields.SaveCC")" id="btnSaveCC" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+						<i class="icon icon-ok"></i>&nbsp;@T("Admin.Orders.Fields.SaveCC")
+					</button>
+                    <button type="submit" name="btnCancelCC" value="@T("Admin.Orders.Fields.CancelCC")" onclick="toggleCC(false);return false;" id="btnCancelCC" class="btn">
+						<i class="icon icon-remove"></i>&nbsp;@T("Admin.Orders.Fields.CancelCC")
+					</button>
                 </td>
             </tr>
+			<tr class="adminSeparator">
+				<td colspan="2">
+					<hr />
+				</td>
+			</tr>
         }
 
         @*codehint: sm-add begin*@
@@ -798,14 +807,23 @@
         @if (Model.AllowStoringDirectDebit)
         {
             <tr>
-                <td>
-                    <input type="submit" name="btnEditDD" value="@T("Admin.Orders.Fields.EditDD")" onclick="toggleDD(true);return false;" id="btnEditDD" class="btn" />
-                    <input type="submit" name="btnSaveDD" value="@T("Admin.Orders.Fields.SaveDD")" id="btnSaveDD" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")    ');" />
-                </td>
-                <td>
-                    <input type="submit" name="btnCancelDD" value="@T("Admin.Orders.Fields.CancelDD")" onclick="toggleDD(false);return false;" id="btnCancelDD" class="btn" />
+                <td colspan="2">
+                    <button type="submit" name="btnEditDD" value="@T("Admin.Orders.Fields.EditDD")" onclick="toggleDD(true);return false;" id="btnEditDD" class="btn">
+						<i class="icon icon-edit"></i>&nbsp;@T("Admin.Orders.Fields.EditDD")
+					</button>
+                    <button type="submit" name="btnSaveDD" value="@T("Admin.Orders.Fields.SaveDD")" id="btnSaveDD" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+						<i class="icon icon-ok"></i>&nbsp;@T("Admin.Orders.Fields.SaveDD")
+					</button>
+                    <button type="submit" name="btnCancelDD" value="@T("Admin.Orders.Fields.CancelDD")" onclick="toggleDD(false);return false;" id="btnCancelDD" class="btn">
+						<i class="icon icon-remove"></i>&nbsp;@T("Admin.Orders.Fields.CancelDD")
+					</button>
                 </td>
             </tr>
+			<tr class="adminSeparator">
+				<td colspan="2">
+					<hr />
+				</td>
+			</tr>
         }
         
         @*codehint: sm-add end*@
