Lots of controller refactoring (reduce redundancy, perf etc.)

--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/throbber.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/throbber.less
@@ -32,7 +32,7 @@ Version: 1, Timestamp: 18.08.2012
         line-height: 32px;
         max-width: 400px;
         font-size: 24px;
-        font-family: 'Segoe UI Semibold', 'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; //@pageTitleFontFamily;
+        font-family: 'Segoe UI Light', 'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; //@pageTitleFontFamily;
         font-weight: 100; //@pageTitleFontWeight;
         padding-left: 44px;
     }
