--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Notifications.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Notifications.cshtml
@@ -1,40 +1,5 @@
-﻿@{
-    //success messages
-    var successMessages = new List<string>();
-    if (TempData[string.Format("sm.notifications.{0}", NotifyType.Success)] != null)
-    {
-        successMessages.AddRange(TempData[string.Format("sm.notifications.{0}", NotifyType.Success)] as IList<string>);
-    }
-    if (ViewData[string.Format("sm.notifications.{0}", NotifyType.Success)] != null)
-    {
-        successMessages.AddRange(ViewData[string.Format("sm.notifications.{0}", NotifyType.Success)] as IList<string>);
-    }
-
-
-    //error messages
-    var errorMessages = new List<string>();
-    if (TempData[string.Format("sm.notifications.{0}", NotifyType.Error)] != null)
-    {
-        errorMessages.AddRange(TempData[string.Format("sm.notifications.{0}", NotifyType.Error)] as IList<string>);
-    }
-    if (ViewData[string.Format("sm.notifications.{0}", NotifyType.Error)] != null)
-    {
-        errorMessages.AddRange(ViewData[string.Format("sm.notifications.{0}", NotifyType.Error)] as IList<string>);
-    }
-
-    //info messages
-    var infoMessages = new List<string>();
-    if (TempData[string.Format("sm.notifications.{0}", NotifyType.Info)] != null)
-    {
-        infoMessages.AddRange(TempData[string.Format("sm.notifications.{0}", NotifyType.Info)] as IList<string>);
-    }
-    if (ViewData[string.Format("sm.notifications.{0}", NotifyType.Info)] != null)
-    {
-        infoMessages.AddRange(ViewData[string.Format("sm.notifications.{0}", NotifyType.Info)] as IList<string>);
-    }
-}
-
-@if (successMessages.Count > 0 || errorMessages.Count > 0 || infoMessages.Count > 0)
+﻿
+@if (this.HasMessages)
 {
     <script type="text/javascript">
         $(function () {
@@ -58,21 +23,22 @@
             });
         })
     </script>
+	
+	<div id="notification-list" style="display:none; position:absolute; left:-9999px">
+		@foreach (var message in this.ErrorMessages)
+		{
+			<div class="msg" data-type="error">@Html.Raw(message)</div>
+		}
+		@foreach (var message in this.SuccessMessages)
+		{
+			<div class="msg" data-type="success">@Html.Raw(message)</div>
+		}
+		@foreach (var message in this.InfoMessages)
+		{
+			<div class="msg" data-type="info">@Html.Raw(message)</div>
+		}
+	</div>
+
+	@Html.Widget("notifications")
 }
 
-<div id="notification-list" style="display:none; position:absolute; left:-9999px">
-    @foreach (var message in errorMessages)
-    {
-        <div class="msg" data-type="error">@Html.Raw(message)</div>
-    }
-    @foreach (var message in successMessages)
-    {
-        <div class="msg" data-type="success">@Html.Raw(message)</div>
-    }
-    @foreach (var message in infoMessages)
-    {
-        <div class="msg" data-type="info">@Html.Raw(message)</div>
-    }
-</div>
-
-@Html.Widget("notifications")
