--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
@@ -17,8 +17,12 @@
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary">
                 <i class="icon-ok"></i>
-                &nbsp;@T("Admin.Common.Save")
+                @T("Admin.Common.Save")
             </button>
+			<a id="uploadpackage" href="#uploadpackage-window" data-toggle="modal" class="btn" role="button">
+				<i class="icon-upload-alt"></i>
+				Upload package
+			</a>
         </div>
     </div>
 	
@@ -170,3 +174,45 @@
         </tr>
     </table> 
 }
+
+@*Upload package form*@
+@{Html.SmartStore().Window()
+	.Name("uploadpackage-window")
+	.Title("Upload theme package")
+	.Content(@<text>
+		@using (Html.BeginForm("UploadPackage", "Theme", FormMethod.Post, new { enctype = "multipart/form-data" }))
+		{
+			<div id="package-upload">
+				<table style="text-align: left;">
+					<tr>
+						<td>
+							<strong>Package file (nupkg): </strong>
+						</td>
+						<td>
+							<input type="file" id="packagefile" name="packagefile" />
+						</td>
+					</tr>
+				</table>
+			</div>
+		}
+
+	</text>)
+	.FooterContent(@<text>
+		<button id="uploadpackagesubmit" type="submit" class="btn btn-primary">Upload</button>
+		<a href="#" class="btn btn-link" data-dismiss="modal">@T("Common.Cancel")</a>
+	</text>)
+	.Modal(true)
+	.Visible(false)
+	.Render();
+}
+
+<script>
+	$(function () {
+		$("#uploadpackagesubmit").click(function (e) {
+			e.preventDefault();
+			var btn = $(this);
+			var win = $('#uploadpackage-window');
+			win.find("form").submit();
+		});
+	});
+</script>
