--- a/src/Presentation/SmartStore.Web/Views/Shared/_Notifications.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Notifications.cshtml
@@ -2,21 +2,19 @@
 {
 	<script type="text/javascript">
         $(function () {
-            var items = $("#notification-list").find("> .msg");
+        	var items = $("#notification-list").find("> .msg");
+        	var titles = {
+        		info: '@T("Common.Note").Text',
+        		success: '@T("Common.Notification").Text',
+        		warning: '@T("Common.Warning").Text',
+        		error: '@T("Common.Error").Text'
+        	};
             items.each(function (i, el) {
                 el = $(el);
                 var type = el.data("type");
-                var title = '@T("Common.Notification").Text';
-                if (type == "error") {
-                    title = '@T("Common.Error").Text';
-                }
-                else if (type == "info") {
-                    title = '@T("Common.Note").Text';
-                }
-                //var title = type == "success" ? '@T("Common.Notification").Text' : '@T("Common.Error").Text';
-                var sticky = type != "success";
+                var sticky = type != "success" && type != "info";
                 var notify = function () {
-                    EventBroker.publish("message", { title: title, text: el.html(), type: type, hide: !sticky });
+                	EventBroker.publish("message", { title: titles[type], text: el.html(), type: type, hide: !sticky });
                 };
                 _.delay(notify, 100 * i);
             });
@@ -35,6 +33,10 @@
 		@foreach (var message in this.InfoMessages)
 		{
 			<div class="msg" data-type="info">@Html.Raw(message)</div>
+		}
+		@foreach (var message in this.WarningMessages)
+		{
+			<div class="msg" data-type="warning">@Html.Raw(message)</div>
 		}
 	</div>
 
